--- a/Vignettes/Toothfish06.Rmd
+++ b/Vignettes/Toothfish06.Rmd
@@ -24,6 +24,10 @@ This document aims to reproduce a Toothfish assessment.
 
 ```{r}
 library(Grym)
+library(ggplot2)
+library(dplyr)
+library(furrr)
+set.seed(31)
 ```
 
 
@@ -31,9 +35,8 @@ library(Grym)
 
 ## Survey Data
 
-Recruitment is backprojected from survey data.  In this case natural
-mortality is assumed constant, so it suffices to backproject the
-recruitment once and use the same recruitment series in all
+Recruitment is backprojected from survey data.  In this case natural mortality is assumed constant,
+so it suffices to backproject the recruitment once and use the same recruitment series in all
 projections.
 
 Import the survey data
@@ -84,9 +87,9 @@ Survey,Year,Frac,Age,Density,SE,Area,ObsTotal,ExpTotal
 9,2005,0.47,6,99.76,18.49,85693.96,173.09,175.94"),header=T)
 ```
 
-The `SurveyAdjust` function scales the survey densities to abundance,
-computes the adjustment scale abundance to recruitment based survival,
-and form the weighted geometric means of the estimates of recruitment.
+The `SurveyAdjust` function scales the survey densities to abundance, computes the adjustment scale
+abundance to recruitment based survival, and form the weighted geometric means of the estimates of
+recruitment.
 ```{r}
 SurveyAdjust <- function(survey.df,Ms,M,rec.age) {
   ## Scale density to abundance
@@ -154,11 +157,6 @@ Year,Catch
 ```
 
 
-### Historic Data
-
-```{r}
-historic.df <- merge(recruit.df,catch.df)
-```
 
 
 ## Growth
@@ -209,15 +207,21 @@ length.age <- approxfun(length.df$Age,length.df$Length,rule=2)
 plot(length.age,0,55)
 ```
 
+## Interpolation
+
+Create an age or length based array through interpolation
+```{r}
+approxArray <- function(x,y,arr,rule=2) array(approx(x,y,arr,rule=rule)$y,dim(arr))
+```
+
+
 ## Selectivity
 
-Selectivity varies with year, and may be length or age based. This
-function creates a list of selectivity matrices together with an index
-vector that matches year to the appropriate selectivity.
+Selectivity varies with year, and may be length or age based. This function creates a list of
+selectivity matrices together with an index vector that matches year to the appropriate selectivity.
 
 ```{r}
 mkSelectivity <- function(ages,ls) {
-  approxArray <- function(x,y,arr,rule=2) array(approx(x,y,arr,rule=rule)$y,dim(arr))
   select5pt <- function(x) approxArray(x,c(0,0,1,1,0),ages)
 
   ## Age based selectivity
@@ -245,37 +249,34 @@ mkSelectivity <- function(ages,ls) {
 
 ## Model
 
-The `ToothfishProjection` function returns a function that generates a
-single set of random projections that differ only in gamma.  The
-projections within each set use a common random selectivity and
-maturity curves, virign biomass and recruitment series, so within a
-set the projections only differ by the level of fishing applied.  The
-resulting function takes a single numerica argument that is used to
-identify the set.
+The `ToothfishProjection` function returns a function that generates a single set of random
+projections that differ only in target catch.  The projections within each set use a common random
+selectivity and maturity curves, virign biomass and recruitment series, so within a set the
+projections only differ by the level of fishing applied.  The resulting function takes a single
+numerica argument that is used to identify the set.
 
 The arguments are 
 
-* `R.mean`, `R.var` - the estimated mean and variance of the number of individuals in the reference
-  age class as a proportion of all individuals of that age or older
-* `R.class` - the reference age class.
-* `R.nsurveys` - the number of surveys used to estimate `R.mean` and `R.var`.
-* `gamma` - the gamma ratios to test
-* `n.years` - the number of years to project ahead.
+* `Catches` - the catch targets to test
+* `Catch.df` - dataframe of historic catches - this must contain the catches for each year from the
+  earliest modelled year upto the first projected year, ordered by year.
+* `Recruit.df` - dataframe of recruitment estimates from survey data.
+* `Length.df` - dataframe of length at age data.
+* `n.years` - the number of years to project ahead
+* `Year1` - the earliest modelled year.
 
 ```{r}
-ToothfishProjection <- function(Catches,historic.df,length.df,n.years=35) {
-
-
-  approxArray <- function(x,y,arr,rule=2) array(approx(x,y,arr,rule=rule)$y,dim(arr))
+ToothfishProjection <- function(Catches,catch.df,recruit.df,length.df,n.years=35,Year1=min(catch.df$Year)) {
   
   ## Daily time steps with 8 age classes
   nsteps <- 24
   Ages <- 4:35
+  plus <- 55-35
   Days <- seq(0,1,length=nsteps+1)
   h <- 1/nsteps
 
   ## Spawning and monitoring interval
-  spawnI <- 13
+  spawnI <- 14:15
   monitorI <- 1:25
 
   ## Ages, length at age and weight at age
@@ -294,7 +295,6 @@ ToothfishProjection <- function(Catches,historic.df,length.df,n.years=35) {
   M <- 0.13
   MMs <- M*Ms
 
-
   ## Length based maturity 
   gs <- rampOgive(ls,930,300)
   
@@ -303,39 +303,50 @@ ToothfishProjection <- function(Catches,historic.df,length.df,n.years=35) {
   fwy[] <- 1
   fwy <- fwy/mean(fwy)
 
-
   ## Calculate recruitment parameters from historic data
   ## By method of moments
-  rlsd <- sqrt(log(1+(sd(historic.df$Rec)/mean(historic.df$Rec))^2))
-  rlmn <- log(mean(historic.df$Rec))-rlsd^2/2
+  rmn <- mean(recruit.df$Rec,na.rm=TRUE)
+  rsd <- sd(recruit.df$Rec,na.rm=TRUE)
+  rmn <- 3016520
+  rsd <- 1.62693*rmn
+  rlsd <- sqrt(log(1+(rsd/rmn)^2))
+  rlmn <- log(rmn)-rlsd^2/2
   ## By maximum likelihood
-  #rlmn <- mean(log(historic.df$Rec))
-  #rlsd <- sd(log(historic.df$Rec))
-  
-  ## This function performs the a projection for each prescibed gamma.
+  #rlmn <- mean(log(recruit.df$Rec))
+  #rlsd <- sd(log(recruit.df$Rec))
+
+  ## Drop missing and out of range recruitment estimates
+  recruit.df <- recruit.df[(recruit.df$Year %in% seq(Year1,length.out=nrow(catch.df)+n.years)) &
+                             !is.na(recruit.df$Rec),]
+    
+  ## This function performs a projection for each prescribed gamma.
   function(run) {
 
-    
     ## Median spawning biomass estimated from 1000 samples
-    ##R <- matrix(prRecruits(1000*length(Msf),ps),1000,length(Msf))
-    ##ssb0 <- spawningB0S(R,gs,ws,Ms,M,spawn=spawnI)
+    R <- matrix(rlnorm(1000*(length(Msf)+plus),rlmn,rlsd),1000,length(Msf)+plus)
+    ssb0 <- spawningB0S(R,gs,ws,Ms,M,spawn=spawnI,plus=TRUE)
 
     ## Stochastic initial age structure in the absence of fishing
-    N0 <- ageStructureS(rlnorm(length(Msf),rlmn,rlsd),Msf,M)
-
-    ## Recruitment for projection period
-    Rs <- rlnorm(n.years,rlmn,rlsd)
-    
+    N0 <- ageStructureS(rlnorm(length(Msf)+plus,rlmn,rlsd),Msf,M,plus=TRUE)
+    ## Initial projection assuming no fishing
+    pr <- project(ws,MMs,Nref=N0,yield=0)
+    pr$F <- pr$Y <- 0
+  
+    ## Recruitment series - log Normal + known from survey
+    Rs <- rlnorm(nrow(catch.df)+n.years,rlmn,rlsd)
+    Rs[recruit.df$Year-Year1+1] <- recruit.df$Rec
+ 
     ## Annual summary quantities
-    n <- nrow(historic.df)+n.years*length(Catches)
+    n <- nrow(catch.df)+n.years*length(Catches)
+    Test<-rep(Catches, each=n/length(Catches))
     Year <- integer(n)
     Target <- R <- N <- B <- SSN <- SSB <- Catch <- F <- double(n)
     k <- 1
 
     ## Project over historic period
-    for(yr in 1:nrow(historic.df)) {    
+    for(yr in 1:nrow(catch.df)) {    
 
-      ## Compute fishing mortality when selectivity changes 
+      ## Recompute fishing mortality when selectivity changes 
       if(sel$index[yr]!=current.sel) {
         current.sel <- sel$index[yr]
         ss <- sel$ss[[current.sel]]
@@ -344,17 +355,17 @@ ToothfishProjection <- function(Catches,historic.df,length.df,n.years=35) {
       }
       
       ## Project over year
-      Year[k] <- historic.df$Year[yr]
-      Target[k] <- historic.df$Catch[yr]
-      R[k] <- historic.df$Rec[yr]
-      if(yr > 1) N0 <- advance(pr$N,R[k])
+      Year[k] <- catch.df$Year[yr]
+      Target[k] <- catch.df$Catch[yr]
+      R[k] <- Rs[yr]
+      N0 <- advance(pr$N,R[k],plus=TRUE)
       pr <- projectC(ws,MMs,Fs,fs,Target[k],Nref=N0,yield=1,Fmax=5,tol=1.0E-8)
-
+      
       ## Collate annual summaries
-      N[k] <- sum(final(pr$N))
-      B[k] <- sum(final(pr$B))
-      SSN[k] <- spawningStock(pr$N,ss,spawnI)
-      SSB[k] <- spawningStock(pr$B,ss,spawnI)
+      N[k] <- sum(initial(pr$N))
+      B[k] <- sum(initial(pr$B))
+      SSN[k] <- spawningStock(pr$N,gs,spawnI)
+      SSB[k] <- spawningStock(pr$B,gs,spawnI)
       Catch[k] <- sum(pr$Y)
       F[k] <- pr$F
       k <- k+1
@@ -362,40 +373,40 @@ ToothfishProjection <- function(Catches,historic.df,length.df,n.years=35) {
     
     ## Record pre-projection state
     pr0 <- pr
-    Year0 <- historic.df$Year[yr]
-
+    
     ## Set projection selectivity
     ss <- sel$ss[[1]]
     fs <- fwy*ss
     Fs <- ctrapz(fs,h)
-
-
+    
+    
     ## Project for each catch
     for(catch in Catches) {
       ## Reset to pre-projection state
       pr <- pr0
-
-      for(yr in 1:n.years) {
+      
+      
+      for(yr in seq(nrow(catch.df)+1,length.out = n.years)) {
         ## Project over year
-        N0 <- advance(pr$N,Rs[yr])
+        N0 <- advance(pr$N,Rs[yr],plus=TRUE)
         pr <- projectC(ws,MMs,Fs,fs,catch,Nref=N0,yield=1,Fmax=5,tol=1.0E-8)
         #if(pr$F==5) return(NULL)
 
         ## Collate annual summaries
-        Year[k] <- yr+Year0
+        Year[k] <- yr+Year1-1
         Target[k] <- catch
         R[k] <- Rs[yr]
-        N[k] <- sum(final(pr$N))
-        B[k] <- sum(final(pr$B))
-        SSN[k] <- spawningStock(pr$N,ss,spawnI)
-        SSB[k] <- spawningStock(pr$B,ss,spawnI)
+        N[k] <- sum(initial(pr$N))
+        B[k] <- sum(initial(pr$B))
+        SSN[k] <- spawningStock(pr$N,gs,spawnI)
+        SSB[k] <- spawningStock(pr$B,gs,spawnI)
         Catch[k] <- sum(pr$Y)
         F[k] <- pr$F
         k <- k+1
       }
     }
     data.frame(Run=run,M=M,Year=Year,Target=Target,
-               R=R,N=N,B=B,SSN=SSN,SSB=SSB,Catch=Catch,F=F)
+               R=R,N=N,B=B,SSN=SSN,SSB=SSB,SSB0=ssb0$median,Catch=Catch,F=F)
   }
 }
 ```
@@ -407,44 +418,104 @@ ToothfishProjection <- function(Catches,historic.df,length.df,n.years=35) {
 
 Calling `ToothfishProjection` returns a function that generates a single "run" of the simulation
 ```{r}
-sim <- ToothfishProjection(Catches=c(2.8e6,2.84e6,2.85e6,2.9e6,3e6,3.2e6),
-                           historic.df=historic.df,length.df=length.df)
+sim <- ToothfishProjection(Catches=c(0,2.8e6,2.84e6,2.85e6,2.9e6,3e6,3.2e6),
+                           catch.df=catch.df,recruit.df=recruit.df,length.df=length.df)
 ```
+
 
 The function takes a single argument that is used to label the results.  Within a single call to
 `sim`, a common set of random maturity, selectivity, initial ages and recruitment series are used to
-make projections for each requested gamma.
+make projections for each requested target catch.
 ```{r}
 df <- sim(1)
 head(df)
 tail(df)
 ```
-
-For these parameters, the recruitment variability has greater impact
-that increased fishing pressure
+For these parameters, the recruitment variability has greater impact than increased fishing pressure
 ```{r}
-library(ggplot2)
-library(dplyr)
 ggplot(df %>% filter(Year > 2005),aes(x=Year,y=N,colour=factor(Target)))+geom_line()
 ```
 
-Generate 100 runs and bind them into one large dataframe
+Generate 100 runs and bind them into one large dataframe. The runs are performed in parallel with
+the `furrr` library. We use 100 runs here to show the concept most assessments would have a lot more, eg 10,000
 ```{r}
-library(furrr)
 plan(multiprocess)
-system.time(df <- future_map_dfr(1:101,sim))
+system.time(df <- future_map_dfr(1:100,sim))
 ```
 
 ```{r}
 ggplot(df %>% filter(Year <= 2005),
        aes(x=Year,y=N,group=Run))+
-  geom_line(colour=rgb(0,0,0,0.1))+ylim(0,5E07)
+  geom_line(colour=rgb(0,0,0,0.1))+ylim(0,6E07)
 ```
 
-```{r}
+```{r,  fig.width=6,fig.height=12}
 ggplot(df %>% filter(Year > 2005),
        aes(x=Year,y=N,group=Run))+
   geom_line(colour=rgb(0,0,0,0.1))+
-  facet_wrap(~Target,ncol=1)+ylim(0,5E07)
+  facet_wrap(~Target,ncol=1)+ylim(0,6E07)
+```
+
+Calculate median escapement with quantiles. 
+```{r}
+grymssb<-df %>% 
+  filter(Year==2040) %>% 
+  mutate(Status=SSB/SSB0) %>% 
+  group_by(Target/1000) %>% 
+  summarise(q2.5=quantile(Status,0.025),
+            q45=quantile(Status,0.45),
+            q50=quantile(Status,0.50),
+            q55=quantile(Status,0.55),
+            q97.5=quantile(Status,0.975),
+            Median=median(Status)) %>% 
+  mutate(Model="Grym")
+
+grymssb
+```
+
+Calculate probability of depletion. 
+```{r}
+grymdep<-df %>% 
+  filter(Year>2006) %>%
+  group_by(Target/1000,Run) %>%
+  summarize(Status=min(SSB/SSB0)) %>% 
+  summarise(Depletion_prob=mean(Status <= 0.2))%>% 
+  mutate(Model="Grym")
+
+grymdep
+
+```
+
+To display the projections we need to calculate the summary statistics for each year and test for each forward projection, as well as for the back projections. We then put these together to plot them. 
+
+
+Calculating the forward projection stats
+```{r}
+ssbstat<-df %>% group_by(Target, Year) %>% filter(Year >= 2006) %>% 
+  mutate(SSB.Status=SSB/SSB0) %>% 
+  summarise(Med=median(SSB.Status), upr=quantile(SSB.Status, 0.975),lwr=quantile(SSB.Status, 0.025),q90=quantile(SSB.Status, 0.9),q10=quantile(SSB.Status, 0.1))
+```
+
+Calculating the historic projection stats
+```{r}
+ssbstatstarts<-df %>% group_by(Year) %>% filter(Year <= 2006) %>% 
+  mutate(SSB.Status=SSB/SSB0) %>% 
+  summarise(Med=median(SSB.Status), upr=quantile(SSB.Status, 0.975),lwr=quantile(SSB.Status, 0.025),q90=quantile(SSB.Status, 0.9),q10=quantile(SSB.Status, 0.1))
+```
+
+Creating the plot: 
+```{r}
+ggplot()+
+  geom_ribbon(data=ssbstat,  aes(x=Year, ymin=lwr, ymax=upr), alpha=0.2)+
+  geom_ribbon(data=ssbstat, aes(x=Year, ymin=q10, ymax=q90), alpha=0.2)+
+geom_line(data=ssbstat, aes(x=Year, y=Med))+
+  facet_wrap(~Target/1000, scales = "free_y")+
+  scale_color_manual(values = c("red"))+
+  scale_fill_manual(values = c("red"))+
+  theme_bw()+
+  geom_ribbon(data=ssbstatstarts, aes(x=Year, ymin=lwr, ymax=upr), alpha=0.2)+
+  geom_ribbon(data=ssbstatstarts, aes(x=Year, ymin=q10, ymax=q90), alpha=0.2)+
+  geom_line(data=ssbstatstarts, aes(x=Year, y=Med)) +
+  labs(y="Spawning Stock Status")
 ```
 
