--- a/Vignettes/Esuperba96.Rmd
+++ b/Vignettes/Esuperba96.Rmd
@@ -179,7 +179,7 @@ ggplot(df %>% mutate(Gamma=factor(Gamma)),aes(x=Year,y=N,colour=Gamma))+geom_lin
 
 Generate 101 runs and bind them into one large dataframe.  The runs are performed in parallel with
 the `furrr` library
-```{r, eval=FALSE}
+```{r}
 plan(multiprocess)
 system.time(df <- future_map_dfr(1:101,sim))
 
@@ -257,6 +257,7 @@ d2 <- df1 %>% group_by(Gamma,Age) %>% summarize(N=mean(Na))
 xtabs(round(N,4)~Gamma+Age,data=d2)
 ```
 
+We can use the dplyr function to calculate the depletion probability and the escapement for each Gamma tested. 
 
 ```{r}
 df %>% group_by(Gamma,Run) %>% summarize(Dep=min(SSB/SSB0)) %>% summarize(Pr=mean(Dep < 0.2))
