--- a/Vignettes/Icefish.Rmd
+++ b/Vignettes/Icefish.Rmd
@@ -3,7 +3,7 @@ title: "Icefish"
 output: rmarkdown::html_vignette
 bibliography: Ref.bib
 vignette: >
-  %\VignetteIndexEntry{Icefish}
+  %\VignetteIndexEntry{Icefish_2019}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
