--- a/README.Rmd
+++ b/README.Rmd
@@ -55,7 +55,7 @@ vignette(package="GrymExamples")
 Specific examples can be accessed with the same function and specifying the topic for example
 
 ```R
-vignette(topic = "Icefish_2019", package="GrymExamples")
+vignette(topic = "Icefish", package="GrymExamples")
 ```
 
 
