--- a/Vignettes/Krill_2010.Rmd
+++ b/Vignettes/Krill_2010.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Krill"
+title: "Krill_2010"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Krill_2010}
@@ -76,80 +76,63 @@ The arguments are
 ```{r}
 KrillProjection <- function(R.mean,R.var,R.class,R.nsurveys,
                        gamma=c(0,0.04,0.08,0.1),n.years=20) {
-
   ## Daily time steps with 8 age classes
   nsteps <- 365
   Ages <- 0:7
   Days <- seq(0,1,length=nsteps+1)
   h <- 1/nsteps
-
   ## Spawning and monitoring interval
   spawnI <- 1:90
   monitorI <- 1:61
-
   ## Ages, length at age and weight at age
   ages <- outer(Days,Ages,FUN="+")
   ls <- vonBertalanffyRAL(ages,t0=0.0,K=0.45,Linf=60.8,f0=0,f1=91/365)
   ws <- powerLW(ls,1,3)
-
   ## Constant intra-annual natural mortality
   ms <- matrix(1,nsteps+1,length(Ages))
   Ms <- ctrapz(ms,h)
   Msf <- final(Ms)
-
   ## Within year fishing pattern - season is first 90 days
   fwy <- double(nsteps+1)
   fwy[1:90] <- 1
   fwy <- fwy/mean(fwy)
-
   ## Recruitment survey - parameters for the observed ratios
   ps0 <- prRecruitPars(Msf,R.mean,R.var,r=R.class)
-
   B0logsd <- 0.2
   
   ## This function performs the a projection for each prescibed gamma.
   function(run) {
-
     ## Length based maturity and selectivity - ramp width is constant
     ## but the midpoint is selected uniformly from a range.
     gs <- rampOgive(ls,runif(1,32,37),6)
     ss <- rampOgive(ls,runif(1,30,39),9)
-
     ## Construct fishing mortalities from season and selectivity
     fs <- fwy*ss
     Fs <- ctrapz(fs,h)
     Fsf <- final(Fs)
-
     ## Boostrap resample to account for uncertainty in R.mean and R.var
     repeat {
       Rbt <- prBootstrap(prRecruits,ps0,R.nsurveys,Msf,r=R.class)
       ps <- tryCatch(prRecruitPars(Msf,R.mean,R.var,r=R.class),error=function(e) e)
       if(!inherits(ps,"error")) break
     }
-
     ## Natural mortalities from proprtional recruitment model
     M <- ps$M
     MMs <- M*Ms
-
     ## Median spawning biomass estimated from 1000 samples
     R <- matrix(prRecruits(1000*length(Msf),ps),1000,length(Msf))
     ssb0 <- spawningB0S(R,gs,ws,Ms,M,spawn=spawnI)$median
-
     ## Stochastic initial age structure in the absence of fishing
     N0 <- ageStructureS(prRecruits(length(Msf),ps),Msf,M)
-
     ## Recruitment series
     Rs <- prRecruits(n.years,ps)
-
     ## Matrix of annual summaries
     n <- (1+n.years)*length(gamma)
     df <- matrix(0,n,11)
     colnames(df) <- c("Year","Gamma","R","N","B","B0","SSN","SSB","SSB0","Catch","F")
-
     ## Initial projection assuming no fishing
     pr0 <- project(ws,MMs,Nref=N0,yield=0)
     pr0$F <- pr0$Y <- 0
-
     ## Initial biomass in monitoring period + log Normal error
     b0 <- meanStock(pr0$B,period=monitorI)
     b0 <- rlnorm(1,log(b0)-B0logsd^2/2,B0logsd)
@@ -159,13 +142,11 @@ KrillProjection <- function(R.mean,R.var,R.class,R.nsurveys,
     for(g in gamma) {
       ## Target catch
       catch <- g*b0
-
       ## Reset to virgin state
       pr <- pr0
       ssb <- spawningStock(pr$B,gs,spawnI)
       
       for(yr in 0:n.years) {
-
         if(yr > 0) {
           ## Recruitment depletion
           r <- min(1,ssb/(0.2*ssb0))
@@ -179,7 +160,6 @@ KrillProjection <- function(R.mean,R.var,R.class,R.nsurveys,
         ## Collate annual summaries
         df[k<-k+1,] <- c(yr,g,initial(pr$N)[1],sum(initial(pr$N)),sum(initial(pr$B)),b0,
                          spawningStock(pr$N,gs,spawnI),ssb,ssb0,sum(pr$Y),pr$F)
-
       }
     }
     data.frame(Run=run,M=M,df)
@@ -223,4 +203,3 @@ system.time(df <- future_map_dfr(1:101,sim))
 ```{r}
 df %>% group_by(Gamma,Run) %>% summarize(Dep=min(SSB/SSB0)) %>% summarize(Pr=mean(Dep < 0.2))
 ```
-
