--- a/Vignettes/Krill_1996.Rmd
+++ b/Vignettes/Krill_1996.Rmd
@@ -182,7 +182,7 @@ the `furrr` library
 ```{r}
 plan(multiprocess)
 system.time(df <- future_map_dfr(1:101,sim))
-
+plan(sequential)
 #saveRDS(df, "Esup96_sim.rds")
 ```
 
