--- a/Vignettes/Krill_1996.Rmd
+++ b/Vignettes/Krill_1996.Rmd
@@ -1,28 +1,23 @@
 ---
-title: "E. Superba"
+title: "Krill 1996"
 output: rmarkdown::html_vignette
 bibliography: Ref.bib
 vignette: >
-  %\VignetteIndexEntry{Krill_1996}
-  %\VignetteEngine{rmarkdown::render}
-  \usepackage[utf8]{inputenc}
+  %\VignetteIndexEntry{Krill 1996}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
-```{r setup, echo=FALSE}
-knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
-```
-
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = NA,
+  comment = "#>",
   fig.width=6,
   fig.height=5
 )
-
 ```
 
-## E. superba
+## Krill 1996
 
 This document aims to reproduce the example presented in @GYM96.
 
@@ -96,7 +91,7 @@ EsuperbaProjection <- function(gamma=c(0,0.1,0.136,0.15,0.2),n.years=20) {
     sigmaR <- sqrt(log(1+runif(n=1, min=0.4, max=0.6)^2))
 
     ## Median spawning biomass estimated from 1001 samples
-    R <- matrix(data=rlnorm(n=1001*length(Msf),meanlog = -sigmaR^2/2, sdlog=sigmaR),                    nrow = 1001,ncol = length(Msf)) #Recruitment matrix
+    R <- matrix(data=rlnorm(n=1001*length(Msf),meanlog = -sigmaR^2/2, sdlog=sigmaR),nrow = 1001,ncol = length(Msf)) #Recruitment matrix
     ssb0 <- spawningB0S(R,gs,ws,Ms,M,spawn=spawnI)$median #Median Spawning biomass
 
     ## Stochastic initial age structure in the absence of fishing
@@ -261,16 +256,13 @@ We can use the dplyr function to calculate the depletion probability and the esc
 
 ```{r}
 df %>% group_by(Gamma,Run) %>% summarize(Dep=min(SSB/SSB0)) %>% summarize(Pr=mean(Dep < 0.2))
-
-grymesc<- df %>%  group_by(Gamma) %>% filter(Year %in% max(Year)) %>% summarise(Med=median(SSB/SSB0))
-
-grymtar<- grymesc %>% filter(Gamma==0) %>% mutate(Target=Med*0.75)
-
-grymesc$Target<-grymtar$Target
-
+grymesc <- df %>%  group_by(Gamma) %>% filter(Year %in% max(Year)) %>% summarise(Med=median(SSB/SSB0))
+grymtar <- grymesc %>% filter(Gamma==0) %>% mutate(Target=Med*0.75)
+grymesc$Target <- grymtar$Target
 grymesc
 
 ```
 
 
 ## References
+
