--- a/Vignettes/Toothfish_2006.Rmd
+++ b/Vignettes/Toothfish_2006.Rmd
@@ -440,7 +440,7 @@ Generate 100 runs and bind them into one large dataframe. The runs are performed
 the `furrr` library. We use 100 runs here to show the concept most assessments would have a lot more, eg 10,000
 ```{r}
 plan(multiprocess)
-system.time(df <- future_map_dfr(1:100,sim,.options = future_options(seed = TRUE)))
+system.time(df <- future_map_dfr(1:100,sim,.options = furrr_options(seed = TRUE)))
 plan(sequential)
 ```
 
